--- a/src/scss/pages/_products-detail.scss
+++ b/src/scss/pages/_products-detail.scss
@@ -22,11 +22,16 @@
     }
     .content {
       color: $white;
+      display: flex;
+      align-items: flex-start;
+      flex-wrap: wrap;
       width: 60%;
       padding-left: 25px;
       .name {
+        width: calc(100% - 20px);
         font-size: 22px;
         padding-bottom: 12px;
+        padding-right: 10px;
         margin-bottom: 12px;
         text-transform: uppercase;
         position: relative;
@@ -40,9 +45,76 @@
           left: 0;
         }
       }
+      .manage {
+        margin-top: 9px;
+        position: relative;
+        &__icon {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 20px;
+          height: 20px;
+          svg {
+            height: 100%;
+          }
+        }
+        &__dropdown {
+          position: absolute;
+          display: flex;
+          flex-direction: column;
+          width: 80px;
+          top: 100%;
+          right: -6px;
+          padding-top: 10px;
+          transform-origin: top right;
+          @include tranform_c(scale(0));
+          @include transition_c(all 0.3s ease-out);
+          &::before {
+            content: "";
+            position: absolute;
+            background: $white;
+            width: 100%;
+            height: calc(100% - 10px);
+            bottom: 0;
+            left: 0;
+          }
+          &::after {
+            content: "";
+            position: absolute;
+            border-bottom: 5px solid $white;
+            border-left: 5px solid transparent;
+            border-right: 5px solid transparent;
+            bottom: calc(100% - 10px);
+            right: 10px;
+          }
+          a,
+          button {
+            color: $black;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            font-size: 16px;
+            padding: 5px 10px;
+            line-height: 24px;
+            position: relative;
+            &:not(:last-child) {
+              border-bottom: 1px solid $grey-light;
+            }
+          }
+        }
+
+        @include respond(hover) {
+          &:hover {
+            .manage__dropdown {
+              @include tranform_c(scale(1));
+            }
+          }
+        }
+      }
       .price {
         display: flex;
         align-items: center;
+        width: 100%;
         line-height: 30px;
         &__before {
           color: $grey;
@@ -58,6 +130,7 @@
         }
       }
       .description {
+        width: 100%;
         font-size: 13px;
         margin-top: 12px;
         margin-bottom: 20px;
