--- a/src/App.css
+++ b/src/App.css
@@ -510,6 +510,124 @@ input:focus {
   -o-transform: translate(50%, -50%);
   transform: translate(50%, -50%);
 }
+.header .other__item .dropdown {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 100%;
+  right: -8px;
+  width: 400px;
+  max-height: 400px;
+  padding-top: 20px;
+  overflow: auto;
+  z-index: 20;
+  transform-origin: top right;
+  -webkit-transform: scale(0);
+  -moz-transform: scale(0);
+  -ms-transform: scale(0);
+  -o-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+.header .other__item .dropdown::after {
+  content: "";
+  position: absolute;
+  border-bottom: 5px solid #fff;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  top: 15px;
+  right: 15px;
+}
+.header .other__item .dropdown li {
+  background: #fff;
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  position: relative;
+}
+.header .other__item .dropdown li:not(:last-child) {
+  border-bottom: 1px solid #dbdbdb;
+}
+.header .other__item .dropdown li .img {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 3px;
+  width: 80px;
+  height: 80px;
+}
+.header .other__item .dropdown li .content {
+  display: flex;
+  flex-wrap: wrap;
+  width: calc(100% - 95px);
+  padding: 0 20px;
+}
+.header .other__item .dropdown li .content .name {
+  color: #888;
+  width: 100%;
+  font-size: 16px;
+  margin-bottom: 5px;
+  line-height: 20px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.header .other__item .dropdown li .content .price {
+  display: flex;
+  align-items: center;
+  line-height: 20px;
+}
+.header .other__item .dropdown li .content .price__before {
+  color: #888;
+  font-size: 14px;
+  font-weight: bold;
+  margin-right: 8px;
+  text-decoration: line-through;
+}
+.header .other__item .dropdown li .content .price__after {
+  font-size: 16px;
+  font-weight: bold;
+}
+.header .other__item .dropdown li .content .quantity {
+  font-size: 14px;
+  padding-left: 10px;
+  margin-left: 10px;
+  position: relative;
+}
+.header .other__item .dropdown li .content .quantity::before {
+  content: "";
+  position: absolute;
+  background: #000;
+  width: 1px;
+  height: 60%;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.header .other__item .dropdown li button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 15px;
+  height: 15px;
+}
+@media only screen and (min-width: 48em) {
+  .header .other__item:hover .dropdown {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+}
 .header--scroll {
   height: 80px;
 }
@@ -1548,6 +1666,15 @@ input:focus {
   font-size: 13px;
   margin-top: 12px;
   margin-bottom: 20px;
+}
+.product-detail__container .content .quantity {
+  background: #fff;
+  border: none;
+  border-radius: 5px;
+  width: 40px;
+  height: 38px;
+  padding: 10px 0 10px 10px;
+  margin-right: 15px;
 }
 
 .products .container {
