--- a/src/scss/pages/_products-detail.scss
+++ b/src/scss/pages/_products-detail.scss
@@ -135,6 +135,15 @@
         margin-top: 12px;
         margin-bottom: 20px;
       }
+      .quantity {
+        background: $white;
+        border: none;
+        border-radius: 5px;
+        width: 40px;
+        height: 38px;
+        padding: 10px 0 10px 10px;
+        margin-right: 15px;
+      }
     }
   }
 }
