--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
 
 html {
   font-size: 62.5%;
-  scroll-behavior: smooth;
 }
 
 body {
@@ -89,6 +88,10 @@ input:focus {
 }
 .primary-heading p {
   color: #888;
+}
+
+.bg-grey {
+  background: #fafafa;
 }
 
 #breadcrumb {
@@ -186,6 +189,27 @@ input:focus {
   width: 20px;
   margin-right: 6px;
 }
+.main-visual {
+  background: url("./img/main-visual.jpeg") center/cover no-repeat;
+  position: relative;
+}
+.main-visual::before {
+  content: "";
+  position: absolute;
+  background: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.main-visual h1 {
+  color: #fff;
+  font-size: 42px;
+  text-align: center;
+  padding: 60px 20px;
+  position: relative;
+}
+
 .pagination {
   display: flex;
   align-items: center;
@@ -1438,6 +1462,590 @@ input:focus {
   max-width: 120px;
   height: 34px;
   margin: 0 auto;
+}
+
+.news-page .container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 40px 0 80px;
+}
+.news-page__sidebar {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  width: 30%;
+  padding: 20px 15px;
+}
+.news-page__sidebar li.search {
+  border-bottom: 1px solid #dbdbdb;
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+  position: relative;
+}
+.news-page__sidebar li.search form {
+  position: relative;
+}
+.news-page__sidebar li.search form input {
+  border: 1px solid #dbdbdb;
+  border-radius: 2px;
+  width: 100%;
+  height: 38px;
+  padding: 8px 15px 8px 44px;
+}
+.news-page__sidebar li.search form button {
+  position: absolute;
+  background: #000;
+  border-radius: 3px;
+  color: #fff;
+  width: 30px;
+  height: 30px;
+  top: 50%;
+  left: 5px;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.news-page__sidebar li.search form button svg {
+  width: 22px;
+}
+.news-page__sidebar li.filter {
+  display: flex;
+  flex-direction: column;
+}
+.news-page__sidebar li.filter:not(:last-of-type) {
+  margin-bottom: 30px;
+}
+.news-page__sidebar li.filter .tit {
+  font-size: 20px;
+  padding-bottom: 18px;
+  margin-bottom: 18px;
+  text-transform: uppercase;
+  position: relative;
+}
+.news-page__sidebar li.filter .tit::before {
+  content: "";
+  position: absolute;
+  background: #ba933e;
+  width: 30px;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+}
+.news-page__sidebar li.filter button {
+  font-size: 18px;
+  text-align: left;
+  padding: 10px 15px;
+  margin: 0 -15px;
+}
+.news-page__sidebar li.filter button:not(:last-child) {
+  margin-bottom: 10px;
+}
+.news-page__sidebar li.filter button.active {
+  background: rgba(219, 219, 219, 0.6);
+  color: #ba933e;
+  pointer-events: none;
+}
+.news-page__list {
+  width: calc(70% - 40px);
+}
+.news-page__list li {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+}
+.news-page__list li:not(:last-child) {
+  margin-bottom: 20px;
+}
+.news-page__list li .top {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+}
+.news-page__list li .top__left {
+  display: flex;
+  align-items: center;
+}
+.news-page__list li .top__left .avatar {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  width: 38px;
+  height: 38px;
+}
+.news-page__list li .top__left .info {
+  padding-left: 12px;
+}
+.news-page__list li .top__left .info .name {
+  font-size: 15px;
+  font-weight: bold;
+  line-height: 20px;
+}
+.news-page__list li .top__left .info .time {
+  font-size: 13px;
+  line-height: 16px;
+}
+.news-page__list li .top__right .edit svg {
+  width: 18px;
+}
+.news-page__list li .mid .content {
+  padding: 0 15px 15px;
+}
+.news-page__list li .mid .content .tit {
+  font-size: 16px;
+  font-weight: bold;
+  padding-bottom: 5px;
+  line-height: 24px;
+}
+.news-page__list li .mid .content .txt {
+  font-size: 15px;
+  line-height: 20px;
+}
+.news-page__list li .mid .img img {
+  width: 100%;
+}
+.news-page__list li .bot {
+  padding: 0 15px;
+}
+.news-page__list li .bot__upper {
+  border-bottom: 1px solid #dbdbdb;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0;
+}
+.news-page__list li .bot__upper .reactions {
+  display: flex;
+}
+.news-page__list li .bot__upper .reactions__icon {
+  display: flex;
+  z-index: 10;
+  position: relative;
+}
+.news-page__list li .bot__upper .reactions__icon .box {
+  position: relative;
+}
+.news-page__list li .bot__upper .reactions__icon .box:not(:nth-child(1)):not(:nth-child(2)):not(:nth-child(3)) {
+  display: none;
+}
+.news-page__list li .bot__upper .reactions__icon .box:not(:first-child) {
+  margin-left: -8px;
+}
+.news-page__list li .bot__upper .reactions__icon .box:nth-child(1) {
+  z-index: -1;
+}
+.news-page__list li .bot__upper .reactions__icon .box:nth-child(2) {
+  z-index: -2;
+}
+.news-page__list li .bot__upper .reactions__icon .box:nth-child(3) {
+  z-index: -3;
+}
+.news-page__list li .bot__upper .reactions__icon .box:nth-child(4) {
+  z-index: -4;
+}
+.news-page__list li .bot__upper .reactions__icon .box:nth-child(5) {
+  z-index: -5;
+}
+.news-page__list li .bot__upper .reactions__icon .box:nth-child(6) {
+  z-index: -6;
+}
+.news-page__list li .bot__upper .reactions__icon .box:nth-child(7) {
+  z-index: -7;
+}
+.news-page__list li .bot__upper .reactions__icon .box::before {
+  content: "";
+  position: absolute;
+  background: #fff;
+  border-radius: 50%;
+  width: calc(100% + 2px);
+  height: calc(100% + 2px);
+  top: -1px;
+  left: -1px;
+  z-index: -1;
+}
+.news-page__list li .bot__upper .reactions__icon .box .icon {
+  width: 20px;
+  height: 20px;
+  position: relative;
+}
+.news-page__list li .bot__upper .reactions__icon .box .icon--like {
+  background: url("./img/reactions/like.png") center/cover no-repeat;
+}
+.news-page__list li .bot__upper .reactions__icon .box .icon--love {
+  background: url("./img/reactions/love.png") center/cover no-repeat;
+}
+.news-page__list li .bot__upper .reactions__icon .box .icon--care {
+  background: url("./img/reactions/care.png") center/cover no-repeat;
+}
+.news-page__list li .bot__upper .reactions__icon .box .icon--laugh {
+  background: url("./img/reactions/haha.png") center/cover no-repeat;
+}
+.news-page__list li .bot__upper .reactions__icon .box .icon--wow {
+  background: url("./img/reactions/wow.png") center/cover no-repeat;
+}
+.news-page__list li .bot__upper .reactions__icon .box .icon--sad {
+  background: url("./img/reactions/sad.png") center/cover no-repeat;
+}
+.news-page__list li .bot__upper .reactions__icon .box .icon--angry {
+  background: url("./img/reactions/angry.png") center/cover no-repeat;
+}
+.news-page__list li .bot__upper .reactions__txt {
+  font-size: 15px;
+  padding-left: 6px;
+  line-height: 20px;
+}
+.news-page__list li .bot__upper .comments {
+  font-size: 15px;
+  line-height: 20px;
+}
+.news-page__list li .bot__lower {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.news-page__list li .bot__lower .group {
+  display: flex;
+  align-items: center;
+  width: calc(100% / 3 - 4px);
+  height: 44px;
+  position: relative;
+}
+.news-page__list li .bot__lower .group .upper {
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 30px;
+  font-size: 16px;
+}
+.news-page__list li .bot__lower .group .icons {
+  position: absolute;
+  background: #fff;
+  border-radius: 100px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  display: flex;
+  padding: 8px;
+  left: 0;
+  bottom: 100%;
+  z-index: 100;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+.news-page__list li .bot__lower .group .icons .lower {
+  width: 48px;
+  height: 48px;
+  margin: 0 5px;
+}
+.news-page__list li .bot__lower .group .icons .lower--like {
+  background: url("./img/reactions/like.png") center/cover no-repeat;
+}
+.news-page__list li .bot__lower .group .icons .lower--love {
+  background: url("./img/reactions/love.png") center/cover no-repeat;
+}
+.news-page__list li .bot__lower .group .icons .lower--care {
+  background: url("./img/reactions/care.png") center/cover no-repeat;
+}
+.news-page__list li .bot__lower .group .icons .lower--laugh {
+  background: url("./img/reactions/haha.png") center/cover no-repeat;
+}
+.news-page__list li .bot__lower .group .icons .lower--wow {
+  background: url("./img/reactions/wow.png") center/cover no-repeat;
+}
+.news-page__list li .bot__lower .group .icons .lower--sad {
+  background: url("./img/reactions/sad.png") center/cover no-repeat;
+}
+.news-page__list li .bot__lower .group .icons .lower--angry {
+  background: url("./img/reactions/angry.png") center/cover no-repeat;
+}
+@media only screen and (min-width: 48em) {
+  .news-page__list li .bot__lower .group:hover .upper {
+    background: #dbdbdb;
+  }
+  .news-page__list li .bot__lower .group:hover .icons {
+    pointer-events: auto;
+    opacity: 1;
+  }
+}
+.news-page__list li .bot__hidden {
+  border-top: 1px solid #dbdbdb;
+  display: none;
+  padding: 5px 0 10px;
+}
+.news-page__list li .bot__hidden--show {
+  display: block;
+}
+.news-page__list li .bot__hidden .setting {
+  text-align: right;
+}
+.news-page__list li .bot__hidden .setting button {
+  color: #888;
+  font-size: 15px;
+}
+.news-page__list li .bot__hidden .list {
+  padding-top: 5px;
+}
+.news-page__list li .bot__hidden .list__item {
+  display: flex;
+  justify-content: space-between;
+}
+.news-page__list li .bot__hidden .list__item:not(:last-child) {
+  display: none;
+}
+.news-page__list li .bot__hidden .list__item .avatar {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+}
+.news-page__list li .bot__hidden .list__item .content {
+  width: calc(100% - 42px);
+}
+.news-page__list li .bot__hidden .list__item .content .info {
+  background: rgba(219, 219, 219, 0.5);
+  border-radius: 20px;
+  display: inline-block;
+  padding: 8px 12px;
+  line-height: 16px;
+  position: relative;
+}
+.news-page__list li .bot__hidden .list__item .content .info .name {
+  font-size: 13px;
+}
+.news-page__list li .bot__hidden .list__item .content .info .txt {
+  font-size: 15px;
+  line-height: 20px;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions {
+  position: absolute;
+  background: #fff;
+  border-radius: 100px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  padding: 2px 5px;
+  bottom: -9px;
+  right: 0;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon {
+  display: flex;
+  z-index: 10;
+  position: relative;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box {
+  position: relative;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box:not(:nth-child(1)):not(:nth-child(2)):not(:nth-child(3)) {
+  display: none;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box:not(:first-child) {
+  margin-left: -8px;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box:nth-child(1) {
+  z-index: -1;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box:nth-child(2) {
+  z-index: -2;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box:nth-child(3) {
+  z-index: -3;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box:nth-child(4) {
+  z-index: -4;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box:nth-child(5) {
+  z-index: -5;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box:nth-child(6) {
+  z-index: -6;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box:nth-child(7) {
+  z-index: -7;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box::before {
+  content: "";
+  position: absolute;
+  background: #fff;
+  border-radius: 50%;
+  width: calc(100% + 2px);
+  height: calc(100% + 2px);
+  top: -1px;
+  left: -1px;
+  z-index: -1;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box .icon {
+  width: 14px;
+  height: 14px;
+  position: relative;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box .icon--like {
+  background: url("./img/reactions/like.png") center/cover no-repeat;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box .icon--love {
+  background: url("./img/reactions/love.png") center/cover no-repeat;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box .icon--care {
+  background: url("./img/reactions/care.png") center/cover no-repeat;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box .icon--laugh {
+  background: url("./img/reactions/haha.png") center/cover no-repeat;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box .icon--wow {
+  background: url("./img/reactions/wow.png") center/cover no-repeat;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box .icon--sad {
+  background: url("./img/reactions/sad.png") center/cover no-repeat;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__icon .box .icon--angry {
+  background: url("./img/reactions/angry.png") center/cover no-repeat;
+}
+.news-page__list li .bot__hidden .list__item .content .info .reactions__txt {
+  font-size: 13px;
+  padding-left: 6px;
+  line-height: 10px;
+}
+.news-page__list li .bot__hidden .list__item .content .other {
+  display: flex;
+  align-items: center;
+  padding-top: 5px;
+  margin-left: 12px;
+}
+.news-page__list li .bot__hidden .list__item .content .other .group {
+  display: flex;
+  position: relative;
+}
+.news-page__list li .bot__hidden .list__item .content .other .group .upper {
+  color: #888;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 10px 0;
+  line-height: 12px;
+}
+.news-page__list li .bot__hidden .list__item .content .other .group .icons {
+  position: absolute;
+  background: #fff;
+  border-radius: 100px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  display: flex;
+  padding: 8px;
+  left: -50px;
+  bottom: 100%;
+  z-index: 100;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+.news-page__list li .bot__hidden .list__item .content .other .group .icons .lower {
+  width: 36px;
+  height: 36px;
+  margin: 0 3px;
+}
+.news-page__list li .bot__hidden .list__item .content .other .group .icons .lower--like {
+  background: url("./img/reactions/like.png") center/cover no-repeat;
+}
+.news-page__list li .bot__hidden .list__item .content .other .group .icons .lower--love {
+  background: url("./img/reactions/love.png") center/cover no-repeat;
+}
+.news-page__list li .bot__hidden .list__item .content .other .group .icons .lower--care {
+  background: url("./img/reactions/care.png") center/cover no-repeat;
+}
+.news-page__list li .bot__hidden .list__item .content .other .group .icons .lower--laugh {
+  background: url("./img/reactions/haha.png") center/cover no-repeat;
+}
+.news-page__list li .bot__hidden .list__item .content .other .group .icons .lower--wow {
+  background: url("./img/reactions/wow.png") center/cover no-repeat;
+}
+.news-page__list li .bot__hidden .list__item .content .other .group .icons .lower--sad {
+  background: url("./img/reactions/sad.png") center/cover no-repeat;
+}
+.news-page__list li .bot__hidden .list__item .content .other .group .icons .lower--angry {
+  background: url("./img/reactions/angry.png") center/cover no-repeat;
+}
+@media only screen and (min-width: 48em) {
+  .news-page__list li .bot__hidden .list__item .content .other .group:hover .icons {
+    pointer-events: auto;
+    opacity: 1;
+  }
+}
+.news-page__list li .bot__hidden .list__item .content .other .time {
+  color: #888;
+  font-size: 12px;
+  padding-left: 4px;
+  line-height: 12px;
+}
+.news-page__list li .bot__hidden .list--all .list__item:not(:last-child) {
+  display: flex;
+}
+.news-page__list li .bot__hidden .form .group {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.news-page__list li .bot__hidden .form .group .avatar {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+}
+.news-page__list li .bot__hidden .form .group input {
+  background: rgba(219, 219, 219, 0.5);
+  border: none;
+  border-radius: 100px;
+  width: calc(100% - 42px);
+  height: 32px;
+  font-size: 15px;
+  padding: 8px 12px;
+  line-height: 20px;
+}
+.news-page__list li .bot__hidden .form .note {
+  font-size: 12px;
+  padding-left: 42px;
+  line-height: 20px;
+}
+.news-page__no-item {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  padding: 20px;
+}
+.news-page__no-item button {
+  background: #d67b35;
+  border-radius: 100px;
+  color: #fff;
+  width: 100%;
+  max-width: 120px;
+  height: 38px;
+  font-size: 16px;
+  margin-top: 10px;
+}
+.news-page .pagination {
+  width: calc(70% - 40px);
+  margin-top: 40px;
+  margin-left: auto;
 }
 
 .product-add__area,
