--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
 @import "./components/breadcrumb";
 @import "./components/button";
 @import "./components/loading";
+@import "./components/main-visual";
 @import "./components/pagination";
 
 //LAYOUT
@@ -24,6 +25,7 @@
 @import "./pages/404";
 @import "./pages/home";
 @import "./pages/login";
+@import "./pages/news";
 @import "./pages/products-add";
 @import "./pages/products-detail";
 @import "./pages/products";
