--- a/src/scss/pages/_products-add.scss
+++ b/src/scss/pages/_products-add.scss
@@ -9,7 +9,7 @@
   }
   &__container {
     border-radius: 10px;
-    box-shadow: 0 2px 4px 0 rgba($color: $black, $alpha: 0.1);
+    box-shadow: $bs;
     width: 100%;
     max-width: 580px;
     overflow: hidden;
