--- a/src/scss/pages/_verify.scss
+++ b/src/scss/pages/_verify.scss
@@ -8,7 +8,7 @@
   &__container {
     background: $white;
     border-radius: 10px;
-    box-shadow: 0 2px 4px 0 rgba($color: $black, $alpha: 0.1);
+    box-shadow: $bs;
     display: flex;
     flex-wrap: wrap;
     width: 100%;
