--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,97 @@ input:focus {
   background: #fafafa;
 }
 
+.admin-sidebar__user {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 15px;
+}
+.admin-sidebar__user .avatar {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  width: 160px;
+  height: 160px;
+}
+.admin-sidebar__user .info .name {
+  font-size: 18px;
+  font-weight: bold;
+  padding: 10px 0 4px;
+  line-height: 28px;
+}
+.admin-sidebar__user .info .position {
+  color: #d67b35;
+  font-size: 15px;
+  text-align: center;
+  line-height: 22px;
+  text-transform: uppercase;
+}
+.admin-sidebar__directory {
+  border-top: 1px solid #fff;
+}
+.admin-sidebar__directory li {
+  border-bottom: 1px solid #fff;
+}
+.admin-sidebar__directory li a {
+  display: flex;
+  padding: 10px 15px;
+  position: relative;
+}
+.admin-sidebar__directory li a::before {
+  content: "";
+  position: absolute;
+  background: #d67b35;
+  width: 4px;
+  height: 0;
+  top: 50%;
+  left: 0;
+  z-index: 2;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+.admin-sidebar__directory li a::after {
+  content: "";
+  position: absolute;
+  background: #fff;
+  width: 0;
+  height: 100%;
+  top: 0;
+  left: 0;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+.admin-sidebar__directory li a svg {
+  width: 18px;
+  z-index: 5;
+  position: relative;
+}
+.admin-sidebar__directory li a span {
+  padding-left: 15px;
+  z-index: 5;
+  position: relative;
+}
+.admin-sidebar__directory li a.active::before {
+  height: calc(100% + 2px);
+}
+.admin-sidebar__directory li a.active::after {
+  width: 100%;
+}
+
 #breadcrumb {
   display: flex;
   align-items: center;
@@ -208,6 +299,227 @@ input:focus {
   text-align: center;
   padding: 60px 20px;
   position: relative;
+}
+
+.fade {
+  -webkit-transition: opacity 0.15s ease-out;
+  -moz-transition: opacity 0.15s ease-out;
+  -ms-transition: opacity 0.15s ease-out;
+  -o-transition: opacity 0.15s ease-out;
+  transition: opacity 0.15s ease-out;
+}
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1040;
+  width: 100vw;
+  height: 100vh;
+  background-color: #000;
+}
+.modal-backdrop.fade {
+  opacity: 0;
+}
+.modal-backdrop.show {
+  opacity: 0.5;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1060;
+  display: none;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  outline: 0;
+}
+.modal.fade .modal-dialog {
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+.modal .modal-dialog {
+  position: absolute;
+  width: 100%;
+  max-width: 740px;
+  top: 50%;
+  left: 50%;
+}
+.modal .modal-dialog .modal-content {
+  background: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.modal .modal-dialog .modal-content .modal-header {
+  background: #d67b35;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px;
+}
+.modal .modal-dialog .modal-content .modal-header .modal-title {
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+}
+.modal .modal-dialog .modal-content .modal-header .close {
+  width: 15px;
+  height: 15px;
+  margin-right: 5px;
+  position: relative;
+}
+.modal .modal-dialog .modal-content .modal-header .close::before, .modal .modal-dialog .modal-content .modal-header .close::after {
+  content: "";
+  position: absolute;
+  background: #fff;
+  width: 100%;
+  height: 3px;
+  top: 50%;
+  left: 50%;
+}
+.modal .modal-dialog .modal-content .modal-header .close::before {
+  -webkit-transform: translate(-50%, -50%) rotate(-45deg);
+  -moz-transform: translate(-50%, -50%) rotate(-45deg);
+  -ms-transform: translate(-50%, -50%) rotate(-45deg);
+  -o-transform: translate(-50%, -50%) rotate(-45deg);
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+.modal .modal-dialog .modal-content .modal-header .close::after {
+  -webkit-transform: translate(-50%, -50%) rotate(-135deg);
+  -moz-transform: translate(-50%, -50%) rotate(-135deg);
+  -ms-transform: translate(-50%, -50%) rotate(-135deg);
+  -o-transform: translate(-50%, -50%) rotate(-135deg);
+  transform: translate(-50%, -50%) rotate(-135deg);
+}
+.modal .modal-dialog .modal-content .modal-header .close span {
+  font-size: 0;
+}
+.modal .modal-dialog .modal-content .modal-body {
+  width: 100%;
+  max-width: 480px;
+  padding: 20px 15px 0;
+  margin: 0 auto;
+}
+.modal .modal-dialog .modal-content .modal-body .reader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal .modal-dialog .modal-content .modal-body .reader__avatar {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: 2px solid #d67b35;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+}
+.modal .modal-dialog .modal-content .modal-body .reader__info {
+  padding-left: 15px;
+}
+.modal .modal-dialog .modal-content .modal-body .reader__info .name {
+  font-size: 15px;
+  font-weight: bold;
+  line-height: 22px;
+}
+.modal .modal-dialog .modal-content .modal-body .reader__info .position {
+  color: #d67b35;
+  font-size: 12px;
+  line-height: 18px;
+}
+.modal .modal-dialog .modal-content .modal-body .details__tit {
+  text-align: center;
+  padding-bottom: 10px;
+}
+.modal .modal-dialog .modal-content .modal-body .details__list {
+  max-height: 168px;
+  overflow: auto;
+  padding: 10px 0;
+}
+.modal .modal-dialog .modal-content .modal-body .details__list li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 0;
+}
+.modal .modal-dialog .modal-content .modal-body .details__list li p em {
+  font-size: 13px;
+  padding-left: 8px;
+}
+.modal .modal-dialog .modal-content .modal-body .details__total {
+  border-top: 1px solid #d67b35;
+  color: #d67b35;
+  font-weight: bold;
+  text-align: right;
+  padding-top: 10px;
+}
+.modal .modal-dialog .modal-content .modal-body .form {
+  border-top: 1px solid #d67b35;
+  padding: 20px 0;
+  margin-top: 20px;
+}
+.modal .modal-dialog .modal-content .modal-body .form__group {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin: 0 auto;
+}
+.modal .modal-dialog .modal-content .modal-body .form__group:not(:last-child) {
+  padding-bottom: 10px;
+}
+.modal .modal-dialog .modal-content .modal-body .form__group .item {
+  width: calc(50% - 5px);
+}
+.modal .modal-dialog .modal-content .modal-body .form__group .item--full {
+  width: 100%;
+}
+.modal .modal-dialog .modal-content .modal-body .form__group .item input,
+.modal .modal-dialog .modal-content .modal-body .form__group .item select {
+  background: rgba(214, 123, 53, 0.08);
+  border: none;
+  width: 100%;
+  height: 38px;
+  padding: 8px 10px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+}
+.modal .modal-dialog .modal-content .modal-footer {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  max-width: 480px;
+  margin: 0 auto;
+  padding: 0 15px 30px;
+}
+.modal .modal-dialog .modal-content .modal-footer button {
+  background: #d67b35;
+  border-radius: 100px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 30px;
+  opacity: 0.5;
+  pointer-events: none;
+}
+.modal .modal-dialog .modal-content .modal-footer button.active {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .pagination {
@@ -829,6 +1141,240 @@ input:focus {
 }
 .header--scroll .other {
   right: 52px;
+}
+
+#admin {
+  display: flex;
+  min-height: calc(100vh - 80px);
+}
+#admin #admin-sidebar {
+  background: rgba(214, 123, 53, 0.2);
+  width: 25%;
+}
+#admin #admin-content {
+  width: 75%;
+}
+
+.cart-page .container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-between;
+  min-height: calc(100vh - 572px);
+  padding: 40px 0 80px;
+}
+.cart-page__details {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  width: calc(70% - 40px);
+  overflow: hidden;
+}
+.cart-page__details li {
+  background: #fff;
+  display: flex;
+  padding: 10px;
+}
+.cart-page__details li:first-child {
+  background: rgba(214, 123, 53, 0.2);
+  text-align: center;
+  padding: 0 10px;
+}
+.cart-page__details li:first-child strong {
+  text-transform: uppercase;
+}
+.cart-page__details li .col {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  min-height: 54px;
+}
+.cart-page__details li .col--01 {
+  display: flex;
+  flex: 1;
+  justify-content: flex-start;
+}
+.cart-page__details li .col--01 .img {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 5px;
+  width: 40px;
+  height: 40px;
+}
+.cart-page__details li .col--01 .tit {
+  flex: 1;
+  padding-left: 8px;
+}
+.cart-page__details li .col--02 {
+  width: 146px;
+}
+.cart-page__details li .col--03 {
+  width: 146px;
+  position: relative;
+}
+.cart-page__details li .col--03 .number {
+  background: #fff;
+  border: 1px solid #d67b35;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  z-index: 5;
+}
+.cart-page__details li .col--03 .group {
+  border-radius: 100px;
+  width: 60px;
+  height: 15px;
+  overflow: hidden;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.cart-page__details li .col--03 .group button {
+  background: #d67b35;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  position: absolute;
+}
+.cart-page__details li .col--03 .group button.down {
+  left: 0;
+}
+.cart-page__details li .col--03 .group button.down::before {
+  content: "";
+  position: absolute;
+  background: #fff;
+  width: 8px;
+  height: 2px;
+  top: 50%;
+  left: 4px;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.cart-page__details li .col--03 .group button.up {
+  right: 0;
+}
+.cart-page__details li .col--03 .group button.up::before {
+  content: "";
+  position: absolute;
+  background: #fff;
+  width: 8px;
+  height: 2px;
+  top: 50%;
+  right: 4px;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.cart-page__details li .col--03 .group button.up::after {
+  content: "";
+  position: absolute;
+  background: #fff;
+  width: 8px;
+  height: 2px;
+  top: 50%;
+  right: 4px;
+  -webkit-transform: translateY(-50%) rotate(90deg);
+  -moz-transform: translateY(-50%) rotate(90deg);
+  -ms-transform: translateY(-50%) rotate(90deg);
+  -o-transform: translateY(-50%) rotate(90deg);
+  transform: translateY(-50%) rotate(90deg);
+}
+.cart-page__details li .col--04 {
+  width: 96px;
+}
+.cart-page__details li .col--05 {
+  width: 46px;
+}
+.cart-page__details li .col--05 svg {
+  color: #d67b35;
+  width: 14px;
+}
+.cart-page__total {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  width: 30%;
+  padding: 25px 30px;
+}
+.cart-page__total .tit {
+  border-bottom: 1px solid #dbdbdb;
+  width: 100%;
+  font-size: 20px;
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+  line-height: 24px;
+  text-align: center;
+  text-transform: uppercase;
+}
+.cart-page__total .total {
+  border-bottom: 1px solid #dbdbdb;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+}
+.cart-page__total .total strong {
+  font-size: 16px;
+}
+.cart-page__total .total span {
+  color: #d67b35;
+  font-size: 18px;
+}
+.cart-page__total .checkout {
+  background: #d67b35;
+  border-radius: 100px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 38px;
+  font-size: 16px;
+}
+.cart-page__no-item {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  padding: 20px;
+}
+.cart-page__no-item a,
+.cart-page__no-item button {
+  background: #d67b35;
+  border-radius: 100px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  max-width: 120px;
+  height: 38px;
+  font-size: 16px;
+  margin-top: 10px;
 }
 
 #home {
@@ -2032,10 +2578,14 @@ input:focus {
   text-align: center;
   padding: 20px;
 }
+.news-page__no-item a,
 .news-page__no-item button {
   background: #d67b35;
   border-radius: 100px;
   color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   max-width: 120px;
   height: 38px;
@@ -2819,6 +3369,206 @@ input:focus {
   height: 28px;
 }
 
+.readers .container {
+  padding: 40px 0 80px;
+}
+.readers__controller {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  padding: 20px 15px;
+}
+.readers__controller .search {
+  position: relative;
+}
+.readers__controller .search input {
+  border: 1px solid #dbdbdb;
+  border-radius: 2px;
+  width: 100%;
+  height: 38px;
+  padding: 8px 15px 8px 44px;
+}
+.readers__controller .search button {
+  position: absolute;
+  background: #000;
+  border-radius: 3px;
+  color: #fff;
+  width: 30px;
+  height: 30px;
+  top: 50%;
+  left: 5px;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.readers__controller .search button svg {
+  width: 22px;
+}
+.readers__controller .filter {
+  display: flex;
+  align-items: center;
+  padding-top: 15px;
+  margin: 15px -10px 0;
+  position: relative;
+}
+.readers__controller .filter::before {
+  content: "";
+  position: absolute;
+  background: #dbdbdb;
+  width: calc(100% - 20px);
+  height: 1px;
+  top: 0;
+  left: 10px;
+}
+.readers__controller .filter li {
+  width: calc(100% / 6);
+  padding: 0 10px;
+}
+.readers__controller .filter li button {
+  border: 1px solid #dbdbdb;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 112px;
+}
+.readers__controller .filter li button img {
+  height: 48px;
+}
+.readers__controller .filter li button span {
+  font-size: 16px;
+  margin-top: 10px;
+}
+.readers__controller .filter li button.active {
+  background: rgba(214, 123, 53, 0.02);
+  border: 2px solid #d67b35;
+}
+.readers__controller .filter li button.active span {
+  color: #d67b35;
+}
+.readers__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-top: 20px;
+}
+.readers__list li {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  width: calc(50% - 10px);
+  margin-bottom: 20px;
+  overflow: hidden;
+}
+.readers__list li .avatar {
+  background: rgba(214, 123, 53, 0.2);
+  width: 40%;
+  height: 100%;
+  min-height: 250px;
+  position: relative;
+}
+.readers__list li .avatar__circle {
+  aspect-ratio: 1/1;
+  border-color: #fff;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  overflow: hidden;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+@supports not (aspect-ratio: 1/1) {
+  .readers__list li .avatar__circle::before {
+    float: left;
+    padding-top: 100%;
+    content: "";
+  }
+  .readers__list li .avatar__circle::after {
+    display: block;
+    content: "";
+    clear: both;
+  }
+}
+.readers__list li .info {
+  width: 60%;
+  padding: 30px;
+}
+.readers__list li .info .name {
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 28px;
+}
+.readers__list li .info .position {
+  color: #d67b35;
+  font-size: 15px;
+  line-height: 22px;
+}
+.readers__list li .info .quote {
+  display: block;
+  font-size: 14px;
+  margin-top: 8px;
+  line-height: 22px;
+}
+.readers__list li .info button {
+  background: #d67b35;
+  border-radius: 100px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 38px;
+  margin-top: 20px;
+}
+.readers__list li .info button svg {
+  width: 18px;
+}
+.readers__list li .info button span {
+  margin-left: 8px;
+}
+.readers__list li.no-item {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  padding: 20px;
+}
+.readers__list li.no-item a,
+.readers__list li.no-item button {
+  background: #d67b35;
+  border-radius: 100px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  max-width: 120px;
+  height: 38px;
+  font-size: 16px;
+  margin-top: 10px;
+}
 .verify__area {
   display: flex;
   align-items: center;
